cabal-version:      3.4
name:               things3-hs
version:            0.1.0.0
synopsis:           A Haskell library for constructing Things3 URLs
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Rodrigo Mesquita
maintainer:         rodrigo.m.mesquita@gmail.com
-- copyright:
category:           Data
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  Things3
    -- other-modules:
    -- other-extensions:
    build-depends:    base, process, uri-encode, text, aeson
    hs-source-dirs:   src
    default-language: GHC2024
